2003-03-15  dodji  <dodji@seketeli.org>

	* src/cr-utils.[ch]
	added some new helper functions/did some cleanups.
	
	* src/cr-tknzr.[ch]:
	made the necessary modifs implied by the new CRNum/CRTerm type
	system.

	* src/cr-term.[ch]:
	big cleanup of the CRTerm/CRNum typing system.

	* src/cr-style.[ch]:
	went forward in the style data structure population code.

	* src/rgb.[ch]:
	made the necessary modifs implied by the new CRNum type
	system
	
	* src/cr-parser.c:
	made the necessary modifs implied by the new CRNum type
	system

	* src/cr-num.[ch]: did some big changes for a better
	handling of numeric types.

2003-03-05  Dodji  <dodji@seketeli.org>

	* src/cr-parser.c (cr_parser_new_from_buf): 
	new method to parse stylesheets from in memory buffers.

2003-03-04  Dodji  <dodji@seketeli.og>

	* src/cr-input.c (cr_input_new_from_buf): 
	added this new method to instanciate an input stream from
	an in memory buffer.
	(cr_input_new_from_uri): modified this method to make it
	use the new cr_input_new_from_buf() method.

2003-03-03  Dodji  <dodji@seketeli.org>

	* tests/README-description.txt: 
	added this test description file in the project.
	
	* src/cr-sel-eng.c (cr_sel_eng_get_matched_rulesets_real): 
	renamed the function cr_sel_eng_get_rulesets_real() into
	this new one. Modified it memory management model so that 
	1/ it does not allocate it output array
	2/ caller can use it in a incremental way and get the rulesets
	chunck by chunk.
	(cr_sel_eng_sel_get_matched_rulesets): 
	added this public interface based on the private interface
	cr_sel_eng_get_matched_rulesets_real().
	

2003-03-02  Dodji  <dodji@seketeli.org>

	* src/cr-sel-eng.c (cr_sel_eng_get_rulesets_real): 
	started to code an implementation of a ruleset "requester".
	Still have to debug all this.

2002-09-25  dodji  <dodji@seketeli.org>

	* src/cr-utils.h: updated this file to define stuffs needed by
	other modules.

	* src/cr-parser-input.c: started to write down code to handle