@@ -95,6 +95,9 @@ cr_num_set_type (CRNum *a_this, enum CRNumType a_type) ;
 enum CRStatus
 cr_num_copy (CRNum *a_dest, CRNum *a_src) ;
 
+enum CRStatus
+cr_num_set (CRNum *a_this, gdouble a_val, enum CRNumType a_type) ;
+
 void
 cr_num_destroy (CRNum *a_this) ;
 
